@@ -1,17 +1,21 @@
 package reve_back.infrastructure.persistence.repository;
 
-import jakarta.transaction.Transactional;
+import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 import reve_back.application.ports.out.DecantPriceRepositoryPort;
 import reve_back.domain.model.DecantPrice;
 import reve_back.infrastructure.persistence.entity.DecantPriceEntity;
+import reve_back.infrastructure.persistence.entity.ProductEntity;
 import reve_back.infrastructure.persistence.jpa.SpringDataDecantPriceRepository;
 import reve_back.infrastructure.persistence.mapper.PersistenceMapper;
 import reve_back.infrastructure.util.BarcodeGenerator;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import org.springframework.data.domain.PageRequest;
 
 @RequiredArgsConstructor
 @Repository
@@ -19,35 +23,67 @@ public class JpaDecantPriceRepositoryAdapter implements DecantPriceRepositoryPor
 
     private final SpringDataDecantPriceRepository repository;
     private final PersistenceMapper mapper;
+    private final EntityManager entityManager;
 
     @Override
     @Transactional
     public List<DecantPrice> saveAllForProduct(Long productId, List<DecantPrice> decants) {
-        List<DecantPriceEntity> entities = decants.stream().map(d -> {
-            DecantPriceEntity e = mapper.toEntity(d);
-            e.setProductId(productId);
-            if (e.getBarcode() == null) {
-                String code = BarcodeGenerator.generateAlphanumeric(12);
-                e.setBarcode(code);
-                e.setImageBarcode("/storage/barcodes/" + code + ".png"); // Lógica de imagen
-            }
-            return e;
-        }).toList();
+        ProductEntity productRef = entityManager.getReference(ProductEntity.class, productId);
 
+        List<DecantPriceEntity> entities = decants.stream()
+                .map(d -> {
+                    // Convertimos Domain -> Entity
+                    DecantPriceEntity e = mapper.toEntity(d);
+
+                    // 2. Asignamos la relación JPA correctamente
+                    // (En lugar de setProductId, usamos setProduct con la referencia)
+                    e.setProduct(productRef);
+
+                    // 3. Lógica de Negocio: Generación automática de Barcode/Imagen
+                    if (e.getBarcode() == null || e.getBarcode().isBlank()) {
+                        String code = BarcodeGenerator.generateAlphanumeric(12);
+                        e.setBarcode(code);
+                        // Asumiendo que agregaste este campo a tu entidad como vimos en el mapper anterior
+                        e.setImageBarcode("/storage/barcodes/" + code + ".png");
+                    }
+
+                    return e;
+                })
+                .collect(Collectors.toList());
+
+        // 4. Guardamos y volvemos a convertir a Domain
         return repository.saveAll(entities).stream()
-                .map(mapper::toDomain).toList();
+                .map(mapper::toDomain)
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<DecantPrice> findAllByProductId(Long productId) {
         return repository.findByProductId(productId).stream()
                 .map(mapper::toDomain)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional(readOnly = true)
     public Optional<DecantPrice> findByBarcode(String barcode) {
         return repository.findByBarcode(barcode)
                 .map(mapper::toDomain);
+    }
+
+    @Override
+    public List<DecantPrice> searchActiveByProductName(String term) {
+        var pageable = PageRequest.of(0, 5);
+
+        var entities = repository.findActiveByProductNameLike(term, pageable);
+
+        return entities.stream().map(mapper::toDomain).toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public Optional<DecantPrice> findById(Long id) {
+        return repository.findById(id).map(mapper::toDomain);
     }
 }
